# Celebrity_Chat_Room

./: CMakeLists.txt  README.md  index.html  main.cpp
data/: response.txt  session_id.txt
docs/: Chat.html  Login.html  Register.html  index.html
include/: ChatHandler.h  FileManager.h  User.h  httplib.h
include/json-develop/: README.md
include/json-develop/.github/workflows/: check_amalgamation.yml  cifuzz.yml  codeql-analysis.yml  comment_check_amalgamation.yml  labeler.yml  publish_documentation.yml  scorecards.yml  stale.yml  ubuntu.yml
include/json-develop/docs/mkdocs/: requirements.txt
include/json-develop/docs/mkdocs/docs/community/: quality_assurance.md
include/json-develop/include/nlohmann/: json.hpp
include/json-develop/tests/src/: unit-bjdata.cpp  unit-deserialization.cpp  unit-msgpack.cpp  unit-regression2.cpp  unit-udt.cpp
src/: ChatHandler.cpp  FileManager.cpp  User.cpp  call_dashscope.py
